--- a/Fake_News_Detection/requirements.txt
+++ b/Fake_News_Detection/requirements.txt
@@ -1,70 +1,2 @@
-﻿altair
-attrs
-backcall
-backports.zoneinfo
-blinker
-cachetools
-certifi
-charset-normalizer
-click
-colorama
-debugpy
-decorator
-entrypoints
-gitdb
-GitPython
-idna
-importlib-metadata
-importlib-resources
-ipykernel
-ipython
-jedi
-jinja2
+﻿streamlit
 joblib
-jsonschema
-jupyter-client
-jupyter-core
-markdown-it-py
-MarkupSafe
-matplotlib-inline
-mdurl
-nest-asyncio
-numpy
-pandas
-parso
-pickleshare
-Pillow
-pkgutil-resolve-name
-prompt-toolkit
-protobuf
-psutil
-pyarrow
-pydeck
-pygments
-Pympler
-pyrsistent
-python-dateutil
-pytz
-pytz-deprecation-shim
-pyzmq
-requests
-rich
-sklearn
-scipy
-six
-smmap
-streamlit
-tenacity
-threadpoolctl
-toml
-toolz
-tornado
-traitlets
-typing-extensions
-tzdata
-tzlocal
-urllib3
-validators
-watchdog
-wcwidth
-zipp
